--- a/prabhsuratsinghblog/layouts/about/single.html
+++ b/prabhsuratsinghblog/layouts/about/single.html
@@ -4,7 +4,7 @@
 
   <h1>About</h1>
 
-  <img src="/images/about.jpg" alt="About Image" class="about-img" />
+  <img src="/images/about-pic.jpeg" alt="About Image" class="about-img" />
 
   <div class="about-content">
     {{ .Content }}
