--- a/prabhsuratsinghblog/static/css/custom.css
+++ b/prabhsuratsinghblog/static/css/custom.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Hammersmith+One&family=Special+Elite&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Hammersmith+One&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Special+Elite&display=swap');
+
+/* Layout tweaks */
 .about-page {
   max-width: 900px;
   margin: auto;
@@ -22,4 +26,17 @@
 
 .project {
   margin-bottom: 32px;
+}
+
+/* 🖋️ Font usage */
+body {
+  font-family: 'Hammersmith One', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Special Elite', cursive;
+}
+
+p {
+  font-family: "Space Mono", monospace;
 }
